--- a/styles.css
+++ b/styles.css
@@ -3,19 +3,11 @@ body {
     text-align: center;
 }
 
-#previewContainer {
-    position: relative;
-    display: inline-block;
+#preview {
+    margin-top: 20px;
 }
 
-#combinedGif {
+img, video {
     max-width: 100%;
     height: auto;
-}
-
-#jorkin {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 50%; /* 50% of the linked GIF */
 }
